Create user swagger functions in API
