# 07-APIS/internal/dto/dto.go
@@ -16,3 +16,7 @@ type GetJWTInput struct {
     Password string `json:"password"`
 }
 
+type GetJWTOutput struct {
+	AccessToken string `json:"access_token"`
+}
+
